# teste-update

./: .gitignore  docker-compose.yml  get_colors.py  package.json
.claude/: settings.local.json
.cursor/rules/: geral.mdc
.github/workflows/: windows-release.yml
backend/: .eslintrc.cjs  .gitignore  README.md  jest-e2e.config.ts  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260227225401_init/: migration.sql
backend/prisma/migrations/20260310164509_add_track_markers/: migration.sql
backend/prisma/migrations/20260311152915_add_fallback_field/: migration.sql
backend/src/: app.module.ts  main.ts
backend/src/prisma/: prisma.service.ts
backend/src/tracks/: tracks.constants.ts  tracks.controller.ts  tracks.module.ts  tracks.repository.ts  tracks.service.spec.ts  tracks.service.ts
backend/src/tracks/dto/: cache-track.dto.ts  filter-tracks.dto.ts  track-marker.dto.ts  track-response.dto.ts
backend/src/tracks/scanner/: music-scanner.service.spec.ts  (+1 more)
backend/test/: tracks.e2e-spec.ts
documentacao/: updater-github-releases.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/docs/: ESTRUTURA.md
frontend/public/: splash.html
frontend/src/app/: globals.css  layout.tsx  page.spec.tsx  page.tsx
frontend/src/hooks/: useAudioLevels.ts
frontend/src/types/: player.ts
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+30 files in other folders)
